projects/01_chat_app/full_stack_chatApp/k8s/manifest/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: backend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: backend

  template:
    metadata:
      name: backend-deployment
      labels:
        app: chat-app
        tier: backend
    
    spec:
      containers:
        - name: backend
          image: hardik002/chatapp-backend:latest
          ports:
          - containerPort: 5001
