projects/01_chat_app/full_stack_chatApp/k8s/manifest/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: frontend

  template:
    metadata:
      name: frontend-deployment
      labels:
        app: chat-app
        tier: frontend
    
    spec:
      containers:
        - name: frontend
          image: hardik002/chatapp-frontend:latest
          ports:
          - containerPort: 80
