projects/01_chat_app/full_stack_chatApp/k8s/manifest/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: mongodb-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: mongodb

  template:
    metadata:
      name: mongodb-deployment
      labels:
        app: chat-app
        tier: mongodb
    
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
          - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          
      volumes:
          - name: mongo-data
            persistentVolumeClaim:
              claimName: mongodb-pvc
