projects/01_chat_app/full_stack_chatApp/k8s/manifest/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
  labels:
    app: chat-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: chat-app
    tier: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
