projects/01_chat_app/full_stack_chatApp/k8s/manifest/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-app
  labels:
    app: chat-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: chat-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
