projects/01_chat_app/full_stack_chatApp/k8s/manifest/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: chat-app
  labels:
    app: chat-app
    tier: mongodb
spec:
  type: ClusterIP
  selector:
    app: chat-app
    tier: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
